z-index and animation fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .spin-item.active {
-  animation: slidein 0.15s infinite cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  animation: slidein 0.17s infinite linear;
 }
 
 .wrapper {
@@ -15,7 +15,7 @@
   from {
   }
   to {
-    transform: translateY(300px);
+    transform: translateY(350px);
   }
 }
 
@@ -25,7 +25,7 @@
   position: absolute;
   width: 100%;
   height: 9%;
-  z-index: 10;
+  z-index: 99;
 }
 
 .wrapper::before {
